--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@testing-library/react": "^11.2.3",
     "@testing-library/user-event": "^12.6.0",
     "antd": "^4.10.3",
+    "axios": "^0.21.1",
     "react": "^17.0.1",
     "react-cosmos": "^5.5.3",
     "react-dom": "^17.0.1",
